# IndustrialSmokePlumeDetection

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/classification/: default.yaml  paper.yaml
configs/segmentation/: default.yaml  paper.yaml
deprecated/classification/: data.py  eval.py  model.py  train.py
deprecated/segmentation/: data.py  eval.py  train.py
docs/: MODEL_ARCHITECTURE.md  MODEL_ARCHITECTURE_SLIDES_OUTLINE.md  augmentation-improvements.md
docs/legacy/: MODEL_ARCHITECTURE_12ch.md  MODEL_ARCHITECTURE_SLIDES_OUTLINE.md
docs/superpowers/plans/: 2026-04-17-repo-cleanup.md  2026-04-19-testing-suite.md
docs/superpowers/specs/: 2026-04-16-training-figures-design.md  2026-04-17-repo-cleanup-design.md  2026-04-19-testing-suite-design.md  2026-04-20-todo-design.md  2026-04-25-todo-roadmap-design.md
lightning_logs/classification_4ch_resnet50/version_1/: events.out.tfevents.1777000517.Shad_Computer.42620.0  hparams.yaml
lightning_logs/segmentation_4ch_unet/version_3/: events.out.tfevents.1777005238.Shad_Computer.41944.0  hparams.yaml
lightning_logs/version_0/: events.out.tfevents.1777154871.Shad_Computer.37984.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1777155139.Shad_Computer.46876.0  hparams.yaml
scripts/: prepare_dataset.py  report_parity.py  smoketest_fast_dev_run.py
src/smoke_detection/: dataset_paths.py
src/smoke_detection/classification/: data.py  eval.py  model.py  train.py
src/smoke_detection/cli/: eval.py  train.py
src/smoke_detection/common/: logging.py  paths.py  seed.py
src/smoke_detection/configs/: base.py  classification.py  loader.py  segmentation.py
src/smoke_detection/data/: classification_datamodule.py  classification_dataset.py  segmentation_datamodule.py  segmentation_dataset.py  transforms.py
src/smoke_detection/evaluation/: classification_metrics.py  segmentation_metrics.py
src/smoke_detection/models/: classifier_resnet.py  segmenter_unet.py
src/smoke_detection/segmentation/: data.py  eval.py  model.py  train.py
src/smoke_detection/training/: classification_module.py  figures_callback.py  segmentation_module.py
tests/: __init__.py  _data.py  conftest.py  test_placeholder.py
tests/e2e/: conftest.py  test_checkpoint_roundtrip.py  test_fast_dev_run.py  test_train_eval_cycle.py
tests/integration/: test_classification_datamodule.py  test_config_to_trainer.py  test_module_consumes_batch.py  test_prepare_dataset_script.py  test_segmentation_datamodule.py
tests/unit/: test_package_imports.py
tests/unit/cli/: __init__.py  test_eval_argparse.py  test_train_argparse.py
tests/unit/common/: __init__.py  test_logging.py  test_paths.py  test_seed.py
tests/unit/configs/: __init__.py  test_loader.py  test_schemas.py
tests/unit/data/: __init__.py  test_classification_dataset.py  test_pad_to_120.py  test_segmentation_dataset.py  test_transforms.py
tests/unit/evaluation/: __init__.py  test_classification_metrics.py  test_segmentation_metrics.py
tests/unit/models/: __init__.py  test_classifier_resnet.py  test_segmenter_unet.py
tests/unit/scripts/: __init__.py  test_prepare_dataset_helpers.py
tests/unit/training/: __init__.py  test_classification_module.py  test_segmentation_module.py
