[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-smoke-plume-detection"
version = "0.2.0"
description = "Industrial smoke plume detection and segmentation from Sentinel-2 imagery"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "rasterio>=1.3",
    "scikit-learn>=1.3",
    "shapely>=2.0",
    "tqdm>=4.65",
    "tensorboard>=2.14",
    "torch>=2.2",
    "torchvision>=0.17",
    "lightning>=2.2",
    "torchmetrics>=1.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.6",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- PyTorch CUDA wheels ---------------------------------------------------
# torch + torchvision resolve from the PyTorch cu124 index, not default PyPI.
# Change the index URL + source entries if you need a different CUDA version
# (e.g. cu121, cu126, cu128). Wheels bundle their own CUDA runtime, so this
# works without a system CUDA toolkit installed — driver is only needed at
# runtime to actually use the GPU.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
